--- a/ApiFlask/templates/Mail/inactive_account.html
+++ b/ApiFlask/templates/Mail/inactive_account.html
@@ -7,7 +7,7 @@
 
 <p>Si no es el usuario, simplemente puede ignorar este correo electrónico</p>
 <p><b>Administrador:</b> Richar Rivera</p>
-<p><b>Correo:</b>iotecuador2021@gmail.com</p>
+<p><b>Email:</b> iotecuador2021@gmail.com</p>
 <p>&copy; Iot Ecuador</p>
 
 {% endfor %}
