--- a/ApiFlask/static/css/error.css
+++ b/ApiFlask/static/css/error.css
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+
 body {
     margin: 0;
     padding: 0;
     background-color: #0a1821;
     height: 100vh;
     width: 100vw;
-    font-family: Roboto, Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
     color: #fff;
     text-align: center;
   }
