--- a/ApiFlask/static/css/gestion.css
+++ b/ApiFlask/static/css/gestion.css
@@ -1,4 +1,7 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
@@ -59,7 +62,7 @@
   }
   
   body {
-    font-family: 'open sans';
+    font-family: 'Roboto', sans-serif;
     background: linear-gradient(rgba(47, 23, 15, 0.76), rgba(47, 23, 15, 0.685)), url("../img/principal.jpg");
     background-attachment: fixed;
     background-position: center;
@@ -93,7 +96,7 @@
   
   nav{
       text-align: center;
-      background-color: rgba(0, 0, 0, 0.1);
+      background-color: rgba(0, 0, 0, 0.3);
       color: var(--color-info-100);
       border: 50px;
       padding-bottom: 150px;
@@ -103,12 +106,10 @@
   
   nav li{
     margin: 0 5px 0 5px;
-  
-    
   }
   
   nav > a{
-    color:#fff;
+    color: var(--color-info-100);
     font-weight: 300;
     text-decoration: none;
     margin-right: 10px;
@@ -184,7 +185,7 @@
   
   
   .portafolio{
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.3);
   }
   
   .galeria-port{
@@ -217,12 +218,14 @@
     height: 100%;
     top: 0;
     transform: scale(0);
-    background: var(--color-info-500);
+    background: var(--color-info-800);
     transition: transform .5s;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    border-width: 1px;
+    border-color: var(--color-primary-900);
   
   }
   
@@ -231,7 +234,7 @@
   }
   
   .hover-galeria p{
-    color: var(--color-warning-500);
+    color: var(--color-info-100);
     font-size: 20px;
     text-align: center;
     text-transform: capitalize;
@@ -249,7 +252,7 @@
   }
   
   .cards .card{
-    background: rgba(0, 0, 0, 0.1);
+    background: rgba(0, 0, 0, 0.3);
     display: flex;
     width: 46%;
     height: 200px;
@@ -264,7 +267,7 @@
     width: 120px;
     height: 120px;
     object-fit: cover;
-    border: 1px solid #fff;
+    border: 1px solid var(--color-success-100);
     border-radius: 50%;
     display: block;
   }
@@ -272,7 +275,7 @@
   .cards .card > .contenido-texto-card{
     width: 100%;
     text-align: center;
-    color: #fff;
+    color: var(--color-success-100);
   }
   
   .cards .card > .contenido-texto-card p{
@@ -283,7 +286,7 @@
   /*  Our servicios */
   
   .about-services{
-    background: rgba(0, 0, 0, 0.1);
+    background: rgba(0, 0, 0, 0.3);
     padding-bottom: 30px;
   }
   
@@ -327,7 +330,7 @@
     justify-content: space-evenly;
     margin: auto;
     padding-bottom: 50px;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid var(--color-primary-100);
   }
   
   .content-foo{
@@ -336,14 +339,14 @@
   }
   
   .content-foo h4{
-    color: #fff;
+    color: var(--color-success-100);
     border-bottom: 3px solid var(--color-info-500);
     padding-bottom: 5px;
     margin-bottom: 10px;
   }
   
   .content-foo p{
-    color: #ccc;
+    color: var(--color-primary-100);
   }
   
   .titulo-final{
@@ -356,7 +359,7 @@
   /*register */
   
   .post-form{
-    color: white;
+    color: var(--color-primary-100);
     background-color: var(--color-primary-700);
     background-size: cover;
     width: auto;
@@ -518,13 +521,14 @@
           font-size: 20px;
       }
   }
+
   .alert{
     width: 400px;
     position: absolute;
     left: 910px;
     top: 10px;
     border-radius: 4px;
-    border-left: 4px solid #9b280b;
+    border-left: 4px solid var(--color-danger-900);
   }
 
   
