--- a/ApiFlask/templates/Access/base.html
+++ b/ApiFlask/templates/Access/base.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
-<head><meta charset="utf-8">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0 "/>
   <title>{% block title %}IoT ecuador{%endblock %}</title>
     <!-- Bootstrap -->
     <link href="static/vendor/bootstrap/css/bootstrap.min.css'" rel="stylesheet">
