--- a/ApiFlask/templates/Admin/admin_panel.html
+++ b/ApiFlask/templates/Admin/admin_panel.html
@@ -18,7 +18,7 @@
           </div>
           <div class="card-body">
             <div class="table-responsive">
-              <table >
+              <table class="table table-bordered table-striped mb-0">
                 <thead>
                   <tr>
                     <th>Nombre</th>
