--- a/ApiFlask/templates/Access/base.html
+++ b/ApiFlask/templates/Access/base.html
@@ -103,13 +103,10 @@
      <footer>
        <div class="contenedor-footer">
            <div class="content-foo">
-               <h4>ESFOT</h4>
-               <p></p>
+               <h4>Escuela de Formación de Tecnólogos</h4>
+               <p>ESFOT</p>
            </div>
-           <div class="content-foo">
-               <h4>Email</h4>
-               <p>usuario@epn.edu.ec</p>
-           </div>
+           
            <div class="content-foo">
                <h4>Escuela Politécnica Nacional</h4>
                <p>Quito-Ecuador</p>
