--- a/ApiFlask/templates/Access/index.html
+++ b/ApiFlask/templates/Access/index.html
@@ -165,7 +165,7 @@
 </section>
 <section class="about-services">
 <div class="contenedor">
-    <h2 class="titulo">Nuestros servicios</h2>
+    <h2 class="titulo">Aplicaciones IoT</h2>
     <div class="servicio-cont">
         <div class="servicio-ind">
             <img src="static/img/aplicacion1.jpg" alt="" height="200px" width="200px">
