--- a/ApiFlask/templates/Mail/active_account.html
+++ b/ApiFlask/templates/Mail/active_account.html
@@ -6,9 +6,16 @@
 <p>Ya puedes hacer uso del sistema web Iot_Ecuador</p>
 
 <p>Ingresa a la pagina: <a href="http://127.0.0.1:5000/"><strong>Iot Ecuador</strong></a>.</p>
+
+
+
+
+
+
+
 <p>Si no realizó esta solicitud, simplemente puede ignorar este correo electrónico</p>
 
-<p><b>Administrador:</b> Richar Rivera</p>
+<p><b>Administrador:</b> Richard Rivera</p>
 <p><b>Email:</b> iotecuador2021@gmail.com</p>
 <p>&copy; Iot Ecuador</p>
 
