--- a/ApiFlask/static/css/autenticar.css
+++ b/ApiFlask/static/css/autenticar.css
@@ -78,7 +78,7 @@ p{
 .login-box {
   width: 350px;
   height: 380px;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: #0a0a0a;
   margin: auto;
   padding: 20px 30px;
   margin-bottom: 50px;
@@ -155,7 +155,7 @@ p{
 .login-box1 {
   width: 400px;
   height: 700px;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: #0a0a0a;
   margin: auto;
   padding: 20px 30px;
 
