--- a/ApiFlask/templates/Mail/inactive_account.html
+++ b/ApiFlask/templates/Mail/inactive_account.html
@@ -5,8 +5,11 @@
 <p>Tú cuenta ha sido deshabilitada.</p>
 
 
+
+
 <p>Si no es el usuario, simplemente puede ignorar este correo electrónico</p>
-<p><b>Administrador:</b> Richar Rivera</p>
+
+<p><b>Administrador:</b> Richard Rivera</p>
 <p><b>Email:</b> iotecuador2021@gmail.com</p>
 <p>&copy; Iot Ecuador</p>
 
