--- a/ApiFlask/templates/User/password.html
+++ b/ApiFlask/templates/User/password.html
@@ -29,7 +29,7 @@
     
 
       
-        <label for="username">Contraseña Actual</label>></i>
+        <label for="username">Contraseña Actual</label></i>
         <input type="password" name="oldpass" class="form-control"  id="InputPassword"  placeholder="Ingrese su contraseña actual">
         
    
