--- a/ApiFlask/templates/Admin/admin_panel.html
+++ b/ApiFlask/templates/Admin/admin_panel.html
@@ -14,7 +14,7 @@
       <div class="col-md-12">
         <div class="card card-plain">
           <div class="card-header">
-            <h4 >Lista de Usuarios</h4>
+            <h4 >Lista de Peticiones de Usuarios</h4>
           </div>
           <div class="card-body">
             <div class="table-responsive">
