--- a/ApiFlask/templates/Mail/active_account.html
+++ b/ApiFlask/templates/Mail/active_account.html
@@ -2,19 +2,22 @@
 
 {% for user in users %}
 <p>Bienvenido! {{user.Name}} {{user.Last_name}} </p>
-
 <p>Ya puedes hacer uso del sistema web Iot_Ecuador</p>
-
-<p>Ingresa a la pagina: <a href="http://127.0.0.1:5000/"><strong>Iot Ecuador</strong></a>.</p>
-
-
-
-
-
-
-
+<p>Ingresa a la pagina: </p> 
+<p>Da clic aquí >><a href="http://127.0.0.1:5000/login"><strong>Iot Ecuador</strong></a>.</p>
+<br>
+<b>Clausula de Uso:</b>
+<br>
+<p style="text-align: justify;"> No se tolerará el uso de bots, scripts u otros métodos para extraer datos del sitio,
+    descargar muestras a un ritmo excesivo o que afecte de otro modo el rendimiento del sitio,
+    los sistemas backend o la experiencia del usuario.
+</p>
+<p style="text-align: justify;">Este sitio no es responsable de ningún daño, incumplimiento u otro incidente.</p>
+<p><b> El acceso se concede bajo su responsabilidad.</b></p>
+<br>
 <p>Si no realizó esta solicitud, simplemente puede ignorar este correo electrónico</p>
-
+<p> <b> No es necerario responder a este mensaje.</b></p>
+<br>
 <p><b>Administrador:</b> Richard Rivera</p>
 <p><b>Email:</b> iotecuador2021@gmail.com</p>
 <p>&copy; Iot Ecuador</p>
