--- a/ApiFlask/templates/Mail/inactive_account.html
+++ b/ApiFlask/templates/Mail/inactive_account.html
@@ -2,13 +2,22 @@
 {% for user in users %}
 <p>Usuario: {{user.Name}} {{user.Last_name}} </p>
 
-<p>Tú cuenta ha sido deshabilitada.</p>
-
-
-
-
+<p>Tú cuenta ha sido deshabilitada por<b> Incumplimiento de la clausula.</b></p>
+<br>
+<b>Clausula de Uso:</b>
+<br>
+<p style="text-align: justify;"> No se tolerará el uso de bots, scripts u otros métodos para extraer datos del sitio,
+    descargar muestras a un ritmo excesivo o que afecte de otro modo el rendimiento del sitio,
+    los sistemas backend o la experiencia del usuario.
+</p>
+<p style="text-align: justify;">Este sitio no es responsable de ningún daño, incumplimiento u otro incidente.</p>
+<p><b> El acceso se concede bajo su responsabilidad.</b></p>
+<br>
+<p>En caso de no haber incumplido con la <b>Clausula</b>, te puedes comunicar al siguiente correo: <b>iotecuador2021@gmail.com</b></p>
+<p>Con el Asunto: <b> Cuenta Deshabilitada</b></p>
+<br>
 <p>Si no es el usuario, simplemente puede ignorar este correo electrónico</p>
-
+<br>
 <p><b>Administrador:</b> Richard Rivera</p>
 <p><b>Email:</b> iotecuador2021@gmail.com</p>
 <p>&copy; Iot Ecuador</p>
