--- a/ApiFlask/templates/Admin/admin_panel.html
+++ b/ApiFlask/templates/Admin/admin_panel.html
@@ -17,7 +17,7 @@
             <h4 >Lista de Peticiones de Usuarios</h4>
           </div>
           <div class="card-body">
-            <div class="table-responsive">
+            <div class="table-wrapper-scroll-y my-custom-scrollbar">
               <table class="table table-bordered table-striped mb-0">
                 <thead>
                   <tr>
