--- a/ApiFlask/templates/Access/base.html
+++ b/ApiFlask/templates/Access/base.html
@@ -42,7 +42,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
      <div class="container">
-       <a class="navbar-brand" href="/">Iot_Ecuador</a>
+      <a class="navbar-brand" href="/"> <img src="static/img/logo.png" ></a> 
        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
        </button>
@@ -69,7 +69,7 @@
                Cuenta
               </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="/profile">Perfil</a>
+              <a class="dropdown-item"  href="/profile">Perfil</a>
               <a class="dropdown-item" href="/password">Contraseña</a>
               <a class="dropdown-item" href="/logout">Salir</a>
             </div>
