--- a/ApiFlask/templates/Dashboard/home.html
+++ b/ApiFlask/templates/Dashboard/home.html
@@ -56,7 +56,7 @@
 
 
 {% if cities %}
-<canvas id="myChart" min-width="400" min-height="400"></canvas>
+<canvas id="myChart" width="400" height="150" style="background-color: white;"></canvas>
 <script>
 var ctx = document.getElementById('myChart').getContext('2d');
 var myChart = new Chart(ctx, {
