--- a/ApiFlask/static/css/gestion.css
+++ b/ApiFlask/static/css/gestion.css
@@ -323,7 +323,7 @@
   /*footer*/
   
   footer{
-    background:rgba(0, 0, 0, .5);
+    background:#0a0a0a;
     padding: 60px 0 30px 0;
     margin: auto;
     overflow: hidden;
