--- a/ApiFlask/templates/Access/index.html
+++ b/ApiFlask/templates/Access/index.html
@@ -156,7 +156,7 @@
         </div>
     </div>
     <div class="card">
-        <img src="static/img/iot.jpg" alt="">
+        <img  src="static/img/Edison.jpeg" alt="">
         <div class="contenido-texto-card">
             <h4 style="color: white;">Edison Jumbo</h4>
             <p>Tecnólogo en Análisis de Sistemas Informáticos</p>
