--- a/ApiFlask/templates/Access/base.html
+++ b/ApiFlask/templates/Access/base.html
@@ -15,6 +15,7 @@
     <link  href="static/css/detalleip.css" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/9fe26e1c40.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"></script>
 
     <!--Map script-->
     <script src="https://code.highcharts.com/maps/highmaps.js"></script>
