--- a/ApiFlask/templates/Access/index.html
+++ b/ApiFlask/templates/Access/index.html
@@ -184,7 +184,7 @@
             <img src="static/img/aplicacion3.jpg"alt="" height="200px" width="200px">
             <h3 style="color: white;">Monitoreo de Tráfico</h3>
             <p>Los teléfonos móviles como sensores, que recolectan y comparten
-             data desde nuestros vehículos a través de aplicaciones como Waze o Google Maps.</p>
+             data a través de aplicaciones como Waze o Google Maps.</p>
         </div>
     </div>
 </div>
