--- a/ApiFlask/templates/User/password.html
+++ b/ApiFlask/templates/User/password.html
@@ -22,7 +22,7 @@
   </div>
 {% endif %}
 
-<div class="login-box">
+<div class="login-box2">
   <h1>Cambiar contraseña</h1>
 
 <form action="" method="post" >
@@ -30,22 +30,89 @@
 
       
         <label for="username">Contraseña Actual</label></i>
-        <input type="password" name="oldpass" class="form-control"  id="InputPassword"  placeholder="Ingrese su contraseña actual">
-        
-   
+        <div>
+        <input type="password" id="myInput" name="oldpass" class="form-control"  id="InputPassword"  placeholder="Ingrese su contraseña actual">
+        <span class="eye" onclick="myFunction()">
+          <i id="hide1" class="fas fa-eye" style="color: white;"></i> 
+          <i id="hide2" class="fas fa-eye-slash" style="color: white;"></i>   
+        </span>
+      </div>
          
     <label for="username">Nueva Contraseña</label>
-      <input type="password" name="newpass" class="form-control"  id="InputPassword"  placeholder="Ingrese su nueva contraseña">
-    
+    <div>
+      <input type="password" id="myInput1" name="newpass" class="form-control"  id="InputPassword"  placeholder="Ingrese su nueva contraseña">
+      <span class="eye" onclick="myFunction1()">
+        <i id="hide3" class="fas fa-eye" style="color: white;"></i> 
+        <i id="hide4" class="fas fa-eye-slash" style="color: white;"></i>   
+      </span>
+    </div>
 
          
         <label for="username">Repita  nueva Contraseña</label>
-        <input type="password" name="repetpass" class="form-control"  id="InputPassword2"  placeholder="Repita la nueva contraseña">
-        
+        <div>
+        <input type="password" id="myInput2" name="repetpass" class="form-control"  id="InputPassword2"  placeholder="Repita la nueva contraseña">
+        <span class="eye" onclick="myFunction2()">
+          <i id="hide5" class="fas fa-eye" style="color: white;"></i> 
+          <i id="hide6" class="fas fa-eye-slash" style="color: white;"></i>   
+        </span>
+      </div>
         <input type="submit" value="Actualizar">
     
 
 </form>
+
+<script>
+  function myFunction(){
+    var x = document.getElementById("myInput");
+    var y = document.getElementById("hide1");
+    var z = document.getElementById("hide2");
+  
+    if(x.type === 'password'){
+      x.type = "text";
+      y.style.display = "block";
+      z.style.display = "none";
+    }else{
+      x.type = "password";
+      y.style.display = "none";
+      z.style.display = "block";
+    }
+  }
+  </script>
+  
+  <script>
+    function myFunction1(){
+      var x = document.getElementById("myInput1");
+      var y = document.getElementById("hide3");
+      var z = document.getElementById("hide4");
+    
+      if(x.type === 'password'){
+        x.type = "text";
+        y.style.display = "block";
+        z.style.display = "none";
+      }else{
+        x.type = "password";
+        y.style.display = "none";
+        z.style.display = "block";
+      }
+    }
+    </script>
+    <script>
+      function myFunction2(){
+        var x = document.getElementById("myInput2");
+        var y = document.getElementById("hide5");
+        var z = document.getElementById("hide6");
+      
+        if(x.type === 'password'){
+          x.type = "text";
+          y.style.display = "block";
+          z.style.display = "none";
+        }else{
+          x.type = "password";
+          y.style.display = "none";
+          z.style.display = "block";
+        }
+      }
+      </script>
 </div>
 
 {% endblock %}
