--- a/ApiFlask/static/css/gestion.css
+++ b/ApiFlask/static/css/gestion.css
@@ -325,8 +325,9 @@
   footer{
     background:#0a0a0a;
     padding: 60px 0 30px 0;
-    margin: auto;
+    margin-top: 20px;
     overflow: hidden;
+
   }
   
   .contenedor-footer{
@@ -438,6 +439,7 @@
       .servicio-ind{
           width: 100%;
           text-align: center;
+          
       }
   
       .servicio-ind:nth-child(1), .servicio-ind:nth-child(2){
