--- a/ApiFlask/templates/Access/login.html
+++ b/ApiFlask/templates/Access/login.html
@@ -32,12 +32,35 @@
     <label for="username">Email</label>
     <input type="text" name="email" class="form-control" placeholder="Ingrese su email">
     <label for="password">Contraseña</label>
-    <input type="password" name="password" class="form-control" placeholder="Ingrese su contraseña">
-    
+    <div>
+    <input type="password" id="myInput" name="password" class="form-control" placeholder="Ingrese su contraseña">
+    <span class="eye" onclick="myFunction()">
+      <i id="hide1" class="fas fa-eye" style="color: white;"></i> 
+      <i id="hide2" class="fas fa-eye-slash" style="color: white;"></i>   
+    </span>
+  </div>
     <input type="submit" value="Iniciar Sesión">
     
     <a href="/register">No tienes cuenta?</a>
   </form>
+
+  <script>
+    function myFunction(){
+      var x = document.getElementById("myInput");
+      var y = document.getElementById("hide1");
+      var z = document.getElementById("hide2");
+    
+      if(x.type === 'password'){
+        x.type = "text";
+        y.style.display = "block";
+        z.style.display = "none";
+      }else{
+        x.type = "password";
+        y.style.display = "none";
+        z.style.display = "block";
+      }
+    }
+    </script>
 </div>
 
 {% endblock %}
