--- a/ApiFlask/templates/Access/base.html
+++ b/ApiFlask/templates/Access/base.html
@@ -71,15 +71,14 @@
               </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item"  href="/profile">Perfil</a>
-              <a class="dropdown-item" href="/password">Contraseña</a>
+              <a class="dropdown-item" href="/password">New Contraseña</a>
               <a class="dropdown-item" href="/logout">Salir</a>
             </div>
           </li>
           </li>
 
           
-         
-
+        
           {% else %}
           
           <li class="nav-item active px-lg-4">
