--- a/ApiFlask/templates/Access/index.html
+++ b/ApiFlask/templates/Access/index.html
@@ -29,11 +29,11 @@
                 },
 
                 title: {
-                    text: 'Iot Ecuador',
+                    text: 'Mapa de Direcciones IPv4 con puertos IoT activos ',
                 },
 
                 subtitle: {
-                    text: '<b>Estado de Ecuador</b>'
+                    text: '<b>Estado por provicias del Ecuador</b>'
                 },
 
                 mapNavigation: {
@@ -84,7 +84,7 @@
 
 <section class="portafolio">
   <div class="contenedor"equipos>
-      <h2 class="titulo">Aparatos IoT</h2>
+      <h2 class="titulo">Dispositivos IoT</h2>
       <div class="galeria-port">
           <div class="imagen-port">
               <img src="static/img/camara.png"  alt="" style="width: 200px; height: 200px;">
