--- a/ApiFlask/templates/Access/base.html
+++ b/ApiFlask/templates/Access/base.html
@@ -56,7 +56,7 @@
             {% if current_user.role == 'admin' %}
       
             <li class="nav-item active px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="/admin_panel">User Control Panel </a>
+              <a class="nav-link text-uppercase text-expanded" href="/admin_panel">Panel de Administración </a>
             </li>
             {%endif%}
 
@@ -80,14 +80,13 @@
           
         
           {% else %}
+          <li class="nav-item active px-lg-4 login" >
+            <a class="nav-link text-uppercase text-expanded" href="/login">Inicia Sesión</a>
+          </li>
+          <li class="nav-item active px-lg-4">
+            <a class="nav-link text-uppercase text-expanded" href="/register">Regístrate</a>
+          </li>
           
-          <li class="nav-item active px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="/register">Registro</a>
-          </li>
-          <li class="nav-item active px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="/login">Login</a>
-          </li>
-
           {% endif %}
 
          </ul>
