--- a/ApiFlask/templates/Access/base.html
+++ b/ApiFlask/templates/Access/base.html
@@ -21,6 +21,7 @@
     <script src="https://code.highcharts.com/maps/highmaps.js"></script>
     <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/mapdata/countries/ec/ec-all.js"></script>
+    <script src="/js/themes/gray.js"></script>
 
     <link href="static/css/card.css" rel="stylesheet">
     <link href="static/css/estadistica.css" rel="stylesheet">
