mod: update colors

--- a/ApiFlask/templates/Access/index.html
+++ b/ApiFlask/templates/Access/index.html
@@ -24,13 +24,13 @@
                 chart: {
                     map: 'countries/ec/ec-all',
                     borderRadius: 10,
-                    backgroundColor: '#0a0a0a'
+                    backgroundColor: '#ffffff' // 0a0a0a
                 },
 
                 title: {
                     text: 'Mapa de Direcciones IPv4 con puertos IoT activos ',
                     style: {
-                        color:'#ffff'
+                        color:'#0a0a0a'
                     }
                     
                 },
@@ -38,7 +38,7 @@
                 subtitle: {
                     text: '<b>Estado por provicias del Ecuador</b>',
                     style: {
-                        color:'#ffff'
+                        color:'#0a0a0a'
                     }
                 },
 
@@ -51,7 +51,7 @@
 
                 colorAxis: {
                     min: 0,
-                    minColor:"#bbbdb9",
+                    minColor:"#bbbdb9", //azul a rojo, mapa de calor
                     maxColor:"#c60000"   
                 },
 
