fixes on charts

--- a/ApiFlask/templates/Access/index.html
+++ b/ApiFlask/templates/Access/index.html
@@ -51,8 +51,8 @@
 
                 colorAxis: {
                     min: 0,
-                    minColor:"#bbbdb9", //azul a rojo, mapa de calor
-                    maxColor:"#c60000"   
+                    minColor:"#ffffff", // bbbdb9 azul a rojo, mapa de calor
+                    maxColor:"#ff0000"   //ff0000 c60000
                 },
 
                 series: [{
